# Forza-Horizon6-Telemetry-Server

./: .env.example  .gitignore  Cargo.toml  README-WINDOWS.md  README.md  config.example.json  package-lock.json  package.json
.github/workflows/: release-windows.yml
apps/dashboard/: index.html  package.json  vite.config.mjs  vite.config.ts
apps/dashboard/src/: App.tsx  ErrorBoundary.tsx  main.tsx
apps/dashboard/src/components/: ConnectionStatus.tsx  GearPanel.tsx  PedalBars.tsx  RpmPanel.tsx  SpeedPanel.tsx  TireTemps.tsx
apps/dashboard/src/settings/: SettingsPage.tsx  settingsTypes.ts
apps/dashboard/src/styles/: global.css
apps/dashboard/src/telemetry/: telemetryClient.ts  telemetryTypes.ts  useTelemetry.ts
apps/server/: package.json  tsconfig.json
apps/server-rs/: Cargo.toml
apps/server-rs/src/: app.rs  config.rs  lib.rs  main.rs  native_gui.rs  windows_timer.rs
apps/server-rs/src/http/: create_http_server.rs  mod.rs
apps/server-rs/src/parser/: fh6_offsets.rs  forza_packet_parser.rs  mod.rs
apps/server-rs/src/telemetry/: mod.rs  telemetry_binary.rs  telemetry_broadcaster.rs  telemetry_runtime.rs  telemetry_store.rs  telemetry_types.rs
apps/server-rs/src/udp/: forza_udp_receiver.rs  mod.rs
apps/server-rs/src/websocket/: mod.rs  telemetry_websocket.rs
apps/server/src/: config.ts  main.ts
apps/server/src/http/: createHttpServer.ts
apps/server/src/parser/: forzaPacketParser.ts
apps/server/src/telemetry/: telemetryBroadcaster.ts  telemetryStore.ts  telemetryTypes.ts
apps/server/src/udp/: forzaUdpReceiver.ts
apps/server/src/websocket/: telemetryWebSocket.ts
docs/: latency-packet-loss-notes.md
scripts/: audit-dashboard-layouts.ps1  dev.mjs  diagnose-latency.mjs  package-windows.ps1  smoke-standalone.cmd  smoke-standalone.mjs  standalone-server.mjs  standalone.cmd  validate-env.cmd  validate-env.mjs
